# airdrop-claim-bot

./: .gitignore  .prettierignore  LICENSE  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  jest.config.ts  package.json  project.json  rollup.config.js
anchor/programs/harkl-max/: Cargo.toml
anchor/programs/harkl-max/src/: errors.rs  lib.rs
anchor/programs/harkl-max/src/state/: claim.rs  constants.rs  mod.rs  pool.rs
anchor/src/: harkl-max-exports.ts  index.ts
anchor/tests/: harkl-max.spec.ts
web/src/: index.html
web/src/app/: app-layout.tsx
web/src/app/solana/: solana-provider.tsx
